# WSTG-Orc

./: .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  state.json
data/: altdns-words.txt
docs/plans/: 2026-02-12-wstg-orchestrator-design.md  2026-02-12-wstg-orchestrator-implementation.md  2026-02-15-acquisition-discovery-design.md  2026-02-15-acquisition-discovery-implementation.md  2026-02-15-asn-enumeration-design.md  2026-02-15-asn-enumeration-implementation.md  2026-02-15-cli-enhancements-design.md  2026-02-15-cli-enhancements.md  2026-02-15-subdomain-enumeration-design.md  2026-02-15-subdomain-enumeration-implementation.md  2026-02-15-tool-checker-design.md  2026-02-15-tool-checker-implementation.md  2026-02-15-url-domain-handling-implementation.md  2026-02-16-pipx-tool-checker-design.md  (+1 more)
tests/: test_api_testing.py  test_auth_testing.py  test_authorization_testing.py  test_base_module.py  test_business_logic.py  test_callback_server.py  test_cli_handler.py  test_command_runner.py  test_config_loader.py  test_configuration_testing.py  test_evidence_logger.py  test_fingerprinting.py  test_http_utils.py  test_input_validation.py  test_main.py  test_orchestrator.py  test_parser_utils.py  test_rate_limiter.py  test_reconnaissance.py  test_reporting.py  test_scope_builder.py  test_scope_checker.py  test_session_testing.py  test_state_manager.py  test_tool_checker.py
wstg_orchestrator/: main.py  reporting.py  scope_builder.py  state_manager.py
wstg_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+25 files in other folders)
